# pwmgr

./: .clangd  README.md  main.cpp  meson.build  shell.nix
src/: arguments.cpp  arguments.h  commands.cpp  commands.h  database.cpp  database.h  generator.cpp  generator.h  search_utils.cpp  search_utils.h
src/commands/: add.cpp  add.h  edit.cpp  edit.h  help.cpp  help.h  list.cpp  list.h  remove.cpp  remove.h  search.cpp  search.h
